# TTSizer

./: pyproject.toml  requirements.txt
configs/: config.yaml  prompt_template.txt
ttsizer/: main.py
ttsizer/core/: audio_extract.py  ctc_align.py  llm_diarize.py  outlier_detect.py  vocals_extract.py
ttsizer/utils/: vocal_utils.py
