[project]
name = "ttsizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "absl-py>=2.2.2",
    "accelerate>=1.6.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.11.18",
    "aiosignal>=1.3.2",
    "alembic>=1.15.2",
    "annotated-types>=0.7.0",
    "antlr4-python3-runtime>=4.9.3",
    "anyio>=4.9.0",
    "asttokens>=3.0.0",
    "async-timeout>=5.0.1",
    "attrs>=25.3.0",
    "audiomentations>=0.24.0",
    "audioread>=3.1.0",
    "auraloss>=0.4.0",
    "av>=14.0.0",
    "backports-datetime-fromisoformat>=2.0.3",
    "beartype>=0.14.1",
    "biopython>=1.86",
    "bitsandbytes>=0.45.5",
    "braceexpand>=0.1.7",
    "brotli>=1.2.0",
    "cached-property>=2.0.1",
    "cachetools>=5.5.2",
    "certifi>=2024.2.2",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.5",
    "click>=8.3.1",
    "cloudpickle>=3.1.1",
    "coloredlogs>=15.0.1",
    "colorlog>=6.9.0",
    "comm>=0.2.2",
    "contourpy>=1.3.2",
    "ctc-forced-aligner",
    "ctranslate2>=4.4.0",
    "cycler>=0.12.1",
    "cython>=0.29.37",
    "cytoolz>=1.0.1",
    "dataclassy>=1.0.1",
    "datasets>=3.2.0",
    "decorator>=5.2.1",
    "deepmultilingualpunctuation",
    "demucs>=4.0.0",
    "diffq>=0.2.4",
    "dill>=0.3.8",
    "distance>=0.1.3",
    "docker-pycreds>=0.4.0",
    "docopt>=0.6.2",
    "dora-search>=0.1.12",
    "editdistance>=0.8.1",
    "efficientnet-pytorch>=0.7.1",
    "einops>=0.8.1",
    "et-xmlfile>=1.1.0",
    "exceptiongroup>=1.2.2",
    "executing>=2.2.0",
    "faster-whisper>=1.1.1",
    "ffmpeg-python>=0.2.0",
    "fiddle>=0.3.0",
    "filelock>=3.18.0",
    "flatbuffers>=25.2.10",
    "fonttools>=4.61.1",
    "frozenlist>=1.6.0",
    "fsspec>=2024.9.0",
    "future>=1.0.0",
    "g2p-en>=2.1.0",
    "gitdb>=4.0.12",
    "gitpython>=3.1.44",
    "google-ai-generativelanguage>=0.6.15",
    "google-api-core>=2.25.0rc1",
    "google-api-python-client>=2.169.0",
    "google-auth>=2.39.0",
    "google-auth-httplib2>=0.2.0",
    "google-genai>=1.13.0",
    "google-generativeai>=0.8.5",
    "googleapis-common-protos>=1.70.0",
    "graphviz>=0.20.3",
    "greenlet>=3.3.2",
    "grpcio>=1.71.0",
    "grpcio-status>=1.71.0",
    "h11>=0.16.0",
    "hdbscan>=0.8.37",
    "httpcore>=1.0.9",
    "httplib2>=0.22.0",
    "httpx>=0.28.1",
    "huggingface-hub[cli]>=0.30.2",
    "humanfriendly>=10.0",
    "hydra-core>=1.3.2",
    "hyper-connections>=0.1.11",
    "hyperpyyaml>=1.2.2",
    "idna>=3.10",
    "inflect>=7.5.0",
    "intervaltree>=3.1.0",
    "ipython>=8.36.0",
    "ipywidgets>=8.1.6",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "jiwer>=3.1.0",
    "joblib>=1.5.3",
    "julius>=0.2.7",
    "jupyterlab-widgets>=3.0.14",
    "kaldi-python-io>=1.2.2",
    "kaldiio>=2.18.1",
    "keyboard>=0.13.5",
    "kiwisolver>=1.4.9",
    "kneed>=0.8.5",
    "lameenc>=1.8.1",
    "lazy-loader>=0.5",
    "levenshtein>=0.27.1",
    "lhotse>=1.31.0",
    "libcst>=1.7.0",
    "librosa>=0.11.0",
    "lightning<2.5",
    "lightning-utilities>=0.14.3",
    "lilcom>=1.8.1",
    "llvmlite>=0.44.0",
    "loguru>=0.7.3",
    "loralib>=0.1.2",
    "mako>=1.3.10",
    "markdown>=3.8",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.2",
    "marshmallow>=4.0.0",
    "matplotlib>=3.10.0",
    "matplotlib-inline>=0.1.7",
    "mdurl>=0.1.2",
    "mediapy>=1.1.6",
    "mir-eval>=0.8.2",
    "ml-collections>=1.1.0",
    "more-itertools>=10.7.0",
    "mpmath>=1.3.0",
    "msgpack>=1.1.2",
    "multidict>=6.4.3",
    "multiprocess>=0.70.16",
    "munch>=4.0.0",
    "nemo-toolkit>=2.2.1",
    "networkx>=3.4.2",
    "nltk>=3.9.1",
    "numba>=0.61.0",
    "numpy>=1.26.4",
    "nv-one-logger-core>=2.3.1",
    "nv-one-logger-pytorch-lightning-integration>=2.3.1",
    "nv-one-logger-training-telemetry>=2.3.1",
    "nvidia-cublas-cu12>=12.6.4.1",
    "nvidia-cuda-cupti-cu12>=12.6.80",
    "nvidia-cuda-nvrtc-cu12>=12.6.77",
    "nvidia-cuda-runtime-cu12>=12.6.77",
    "nvidia-cudnn-cu12>=9.5.1.17",
    "nvidia-cufft-cu12>=11.3.0.4",
    "nvidia-cufile-cu12>=1.11.1.6",
    "nvidia-curand-cu12>=10.3.7.77",
    "nvidia-cusolver-cu12>=11.7.1.2",
    "nvidia-cusparse-cu12>=12.5.4.2",
    "nvidia-cusparselt-cu12>=0.6.3",
    "nvidia-nccl-cu12>=2.26.2",
    "nvidia-nvjitlink-cu12>=12.6.85",
    "nvidia-nvtx-cu12>=12.6.77",
    "omegaconf>=2.2.3",
    "onnx>=1.17.0",
    "onnxruntime>=1.21.1",
    "openpyxl>=3.1.2",
    "openunmix>=1.3.0",
    "optuna>=4.3.0",
    "packaging<25",
    "pandas>=2.2.3",
    "parso>=0.8.4",
    "pb-bss-eval>=0.0.2",
    "pedalboard>=0.8.9",
    "peft>=0.15.2",
    "pesq>=0.0.4",
    "pexpect>=4.9.0",
    "pgvector>=0.4.2",
    "pillow>=12.1.1",
    "plac>=1.4.5",
    "platformdirs>=4.9.4",
    "pooch>=1.9.0",
    "praatio>=6.2.2",
    "pretrainedmodels>=0.7.4",
    "primepy>=1.3",
    "prodigyopt>=1.1.2",
    "prompt-toolkit>=3.0.51",
    "propcache>=0.3.1",
    "proto-plus>=1.26.1",
    "protobuf>=3.20.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.11",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pyannote-core>=5.0.0",
    "pyannote-database>=5.1.3",
    "pyannote-metrics>=3.2.1",
    "pyarrow>=20.0.0",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pybind11>=2.13.6",
    "pycparser>=3.0",
    "pydantic>=2.11.3",
    "pydantic-core>=2.33.1",
    "pydub>=0.25.1",
    "pygments>=2.19.2",
    "pyloudnorm>=0.1.1",
    "pynini>=2.1.7",
    "pynndescent>=0.5.13",
    "pyparsing>=3.3.2",
    "pysocks>=1.7.1",
    "pystoi>=0.4.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "pytorch-lightning<2.5",
    "pytorch-ranger>=0.1.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.13.0",
    "regex>=2024.11.6",
    "requests>=2.32.5",
    "resampy>=0.4.3",
    "retrying>=1.3.4",
    "rich>=14.3.3",
    "rich-click>=1.9.7",
    "rotary-embedding-torch>=0.3.5",
    "rsa>=4.9.1",
    "ruamel-yaml>=0.18.10",
    "ruamel-yaml-clib>=0.2.12",
    "sacremoses>=0.1.1",
    "safetensors>=0.5.3",
    "sageattention>=1.0.6",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "segmentation-models-pytorch>=0.3.3",
    "sentencepiece>=0.2.0",
    "sentry-sdk>=2.27.0",
    "setproctitle>=1.3.5",
    "shellingham>=1.5.4",
    "silero-vad>=5.1.2",
    "six>=1.17.0",
    "smmap>=5.0.2",
    "sniffio>=1.3.1",
    "sortedcontainers>=2.4.0",
    "soundfile>=0.13.1",
    "sox>=1.5.0",
    "soxr>=0.5.0.post1",
    "spafe>=0.3.2",
    "speechbrain>=1.0.3",
    "sqlalchemy>=2.0.48",
    "stack-data>=0.6.3",
    "standard-aifc>=3.13.0",
    "standard-sunau>=3.13.0",
    "submitit>=1.5.2",
    "sympy>=1.13.3",
    "tabulate>=0.9.0",
    "tensorboard>=2.19.0",
    "tensorboard-data-server>=0.7.2",
    "termcolor>=3.0.1",
    "text-unidecode>=1.3",
    "texterrors>=0.5.1",
    "threadpoolctl>=3.6.0",
    "timm>=0.9.2",
    "tokenizers>=0.21.1",
    "toolz>=1.0.0",
    "torch>=2.7.0",
    "torch-audiomentations>=0.12.0",
    "torch-log-wmse>=0.3.0",
    "torch-optimizer>=0.1.0",
    "torch-pitch-shift>=1.2.5",
    "torch-stoi>=0.2.3",
    "torchaudio>=2.7.0",
    "torchmetrics>=1.0.0",
    "torchseg>=0.0.1a1",
    "torchvision>=0.22.0",
    "tqdm>=4.67.3",
    "traitlets>=5.14.3",
    "transformers>=4.48.3",
    "treetable>=0.2.5",
    "triton>=3.3.0",
    "typeguard>=4.4.2",
    "typer>=0.15.2",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.0",
    "tzdata>=2025.2",
    "umap-learn>=0.5.6",
    "unicodedata2>=17.0.1",
    "unidecode>=1.4.0",
    "uritemplate>=4.1.1",
    "urllib3>=2.6.3",
    "wandb>=0.19.10",
    "wcwidth>=0.2.13",
    "webdataset>=0.2.111",
    "websockets>=15.0.1",
    "werkzeug>=3.1.3",
    "wespeaker",
    "wget>=3.2",
    "widgetsnbextension>=4.0.14",
    "wrapt>=1.17.2",
    "xxhash>=3.5.0",
    "yarl>=1.20.0",
]

[tool.uv.sources]
ctc-forced-aligner = { git = "https://github.com/MahmoudAshraf97/ctc-forced-aligner.git", rev = "201276a4ea2ddd3f5caead1ac4f211477ae3da6d" }
deepmultilingualpunctuation = { git = "https://github.com/oliverguhr/deepmultilingualpunctuation.git", rev = "5a0dd7f4fd56687f59405aa8eba1144393d8b74b" }
wespeaker = { git = "https://github.com/wenet-e2e/wespeaker.git", rev = "310a15850895b54e20845e107b54c9a275d39a2d" }
